; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_network.c_set_socket_dualstack.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_network.c_set_socket_dualstack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IPPROTO_IPV6 = common dso_local global i32 0, align 4
@IPV6_V6ONLY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @set_socket_dualstack(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32 4, i32* %5, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @IPPROTO_IPV6, align 4
  %9 = load i32, i32* @IPV6_V6ONLY, align 4
  %10 = bitcast i32* %4 to i8*
  %11 = call i32 @getsockopt(i32 %7, i32 %8, i32 %9, i8* %10, i32* %5)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i32, i32* %4, align 4
  %16 = icmp eq i32 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %26

18:                                               ; preds = %14, %1
  store i32 0, i32* %4, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @IPPROTO_IPV6, align 4
  %21 = load i32, i32* @IPV6_V6ONLY, align 4
  %22 = bitcast i32* %4 to i8*
  %23 = call i64 @setsockopt(i32 %19, i32 %20, i32 %21, i8* %22, i32 4)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %18, %17
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @getsockopt(i32, i32, i32, i8*, i32*) #1

declare dso_local i64 @setsockopt(i32, i32, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
